# trunk

.github/workflows/: ci.yaml
examples/leptos-baseline/: Cargo.toml  README.md  index.html
examples/leptos-baseline/.cargo/: config.toml
examples/leptos-baseline/src/: main.rs
examples/leptos-split/: Cargo.toml  README.md  index.html
examples/leptos-split/.cargo/: config.toml
examples/leptos-split/src/: main.rs
examples/wasm-split/: Cargo.toml  README.md  index.html
examples/wasm-split/.cargo/: config.toml
examples/wasm-split/src/: main.rs
guide/src/assets/: index.md
guide/src/configuration/: index.md
schemas/: config.json
src/cmd/: build.rs
src/config/models/: build.rs
src/config/rt/: build.rs
src/pipelines/rust/: mod.rs  output.rs  wasm_split.rs
tests/e2e/: leptos-split.spec.js  package.json  split-wasm.spec.js
